tests/errors/cannot_take_address_of_primitive.n
Person :: struct { name str }

fn main() {
    int x = 5;
    p := &x;
}
